--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "aos": "^2.3.4",
+    "framer-motion": "^11.11.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3",
     "route": "^0.2.5"
   },
   "devDependencies": {
